--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-asset": "~8.10.1"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
