--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,9 +93,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace 'com.spencerandrew.fhirdashboard'
+    namespace 'com.brewerdigital.fhirdashboard'
     defaultConfig {
-        applicationId 'com.spencerandrew.fhirdashboard'
+        applicationId 'com.brewerdigital.fhirdashboard'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
