--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/error-message": "^2.0.1",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/drawer": "^6.6.6",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "@tanstack/react-query": "^5.7.2",
@@ -31,7 +32,9 @@
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
