--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.12",
+    "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
+    "expo-notifications": "~0.20.1",
     "expo-pixi": "^2.1.1",
     "expo-router": "^2.0.0",
     "expo-secure-store": "~12.3.1",
