--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+.env
 # Build and Prebuild artifacts
 ios/
 android/
