--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-dev-client": "~2.4.12",
     "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.5",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
