--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-pdf": "^6.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
