--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@expo-google-fonts/alata": "^0.2.3",
     "@hookform/error-message": "^2.0.1",
     "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/drawer": "^6.6.6",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@stripe/stripe-react-native": "^0.35.0",
+    "@stripe/stripe-react-native": "0.28.0",
     "@tanstack/react-query": "^5.7.2",
     "ajv": "^8.12.0",
     "expo": "~49.0.13",
@@ -74,6 +74,12 @@
   "overrides": {
     "@rneui/themed": {
       "@rneui/base": "4.0.0-rc.8"
-    }
+    },
+    "@expo/config-plugins":"~7.2.2",
+    "@expo/prebuild-config": "~6.2.4"
+  },
+  "resolutions": {
+    "@expo/config-plugins":"~7.2.2",
+    "@expo/prebuild-config": "~6.2.4"
   }
 }
