fixed android blurview bug, fixed styling issues on dashboard with overlap, fixed lightbulb animation on android

--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,11 @@
       "ios": {
         "developmentClient": true,
         "distribution": "internal"
-      }
+      },
+      "android":{
+        "developmentClient": true,
+        "distribution": "internal"
+       }
     },
     "preview": {
       "distribution": "internal"
