updated eas to give development builds certain env variables, updated AI to use new url

--- a/eas.json
+++ b/eas.json
@@ -11,6 +11,12 @@
       }
     },
     "development": {
+      "env": {
+        "EXPO_PUBLIC_AUTH_GRANT_TYPE":"client_credentials",
+        "EXPO_PUBLIC_API_URL":"https://fumage-brewerdigital-apiprize.canvasmedical.com",
+        "EXPO_PUBLIC_STRIPE_API_URL":"https://gozj2why30.execute-api.us-east-2.amazonaws.com/Prod",
+        "EXPO_PUBLIC_OPENAI_API_URL":"https://xwpu2p87c7.execute-api.us-east-2.amazonaws.com/Prod/explain_fhir_object"
+      },
       "ios": {
         "developmentClient": true,
         "distribution": "internal"
@@ -28,7 +34,7 @@
         "EXPO_PUBLIC_AUTH_GRANT_TYPE":"client_credentials",
         "EXPO_PUBLIC_API_URL":"https://fumage-brewerdigital-apiprize.canvasmedical.com",
         "EXPO_PUBLIC_STRIPE_API_URL":"https://gozj2why30.execute-api.us-east-2.amazonaws.com/Prod",
-        "EXPO_PUBLIC_OPENAI_API_URL":"https://t2zfdmyyx6.execute-api.us-east-2.amazonaws.com/Prod/explain_fhir_bject",
+        "EXPO_PUBLIC_OPENAI_API_URL":"https://xwpu2p87c7.execute-api.us-east-2.amazonaws.com/Prod/explain_fhir_object"
       },
       "ios": {
         "image": "latest"
