added build code to android object in app.json

--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
       }
     },
     "android": {
+      "versionCode": 6,
       "adaptiveIcon": {
         "foregroundImage": "./assets/appstore.png",
         "backgroundColor": "#ffffff"
