updated datadog config, added padding to navlink so its easier to click, added undefined rescue to patients name in header

--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       }
     },
     "android": {
-      "versionCode": 6,
+      "versionCode": 7,
       "adaptiveIcon": {
         "foregroundImage": "./assets/appstore.png",
         "backgroundColor": "#ffffff"
@@ -43,7 +43,8 @@
     "plugins": [
       "expo-router",
       "@config-plugins/react-native-blob-util",
-      "@config-plugins/react-native-pdf"
+      "@config-plugins/react-native-pdf",
+      "expo-datadog"
     ],
     "extra": {
       "router": {
