--- a/app.json
+++ b/app.json
@@ -35,7 +35,8 @@
         "android.permission.DOWNLOAD_WITHOUT_NOTIFICATION",
         "android.permission.ACCESS_NETWORK_STATE"
       ],
-      "package": "com.brewerdigital.fhirdashboard"
+      "package": "com.brewerdigital.fhirdashboard",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/appstore.png"
@@ -52,6 +53,9 @@
       },
       "eas": {
         "projectId": "eabcadfa-7fee-400e-8e04-f2f5c4d1d35b"
+      },
+      "bugsnag": {
+        "apiKey": "1e30b647adf4a385efbbb03d2c5f3a34"
       }
     },
     "owner": "brewerdigital"
