added contact information screen to onboarding.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,17 @@
       "@components/*": [
         "components/*"
       ],
+      "@constants/*": [
+        "constants/*"
+      ],
       "@interfaces/*": [
         "interfaces/*"
       ],
       "@services/*": [
         "services/*"
+      ],
+      "@stores": [
+        "store/*"
       ],
       "@styles": [
         "style-variables.ts"
