--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-application": "~5.3.0",
     "expo-blur": "~12.4.1",
+    "expo-build-properties": "^0.8.3",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.12",
