--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 .env
+google_services.json
 # Build and Prebuild artifacts
 ios/
 android/
