--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "VivoCare",
-    "slug": "fhir-app",
+    "slug": "VivoCare",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/appstore.png",
@@ -17,13 +17,13 @@
     "ios": {
       "supportsTablet": false,
       "bundleIdentifier": "com.brewerdigital.fhirdashboard",
-      "buildNumber": "16",
+      "buildNumber": "17",
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to securely capture credit card information."
       }
     },
     "android": {
-      "versionCode": 16,
+      "versionCode": 17,
       "adaptiveIcon": {
         "foregroundImage": "./assets/appstore.png",
         "backgroundColor": "#ffffff"
