--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "VivoCare",
-    "slug": "VivoCare",
+    "slug": "fhir-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/appstore.png",
