--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ EXPO_PUBLIC_CLIENT_SECRET=
 EXPO_PUBLIC_API_URL=
 EXPO_PUBLIC_PRACTITIONER_ID=
 EXPO_PUBLIC_CLINIC_ID=
+EXPO_PUBLIC_OPENAI_API_URL=
+EXPO_PUBLIC_OPENAI_API_KEY=
+EXPO_PUBLIC_DD_CLIENT_TOKEN=
+EXPO_PUBLIC_DD_APPLICATION_ID=
 EXPO_PUBLIC_STRIPE_API_URL=
 EXPO_PUBLIC_STRIPE_API_KEY=
 EXPO_PUBLIC_STRIPE_PUBLIC_KEY=
+EXPO_PUBLIC_BUGSNAG_API_KEY=
+BUGSNAG_API_KEY=
+GOOGLE_SERVICES_JSON='./google_services.json'
