added comments as documentation to services, utils, store, and .env.example files

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# This file contains the example environment variables for the FHIR Dashboard application.
+# These variables are used to configure the application's authentication, API endpoints, and other settings.
+# Please copy this file and rename it to ".env.local" before running the application.
+# Make sure to fill in the appropriate values for each variable.
 EXPO_PUBLIC_AUTH_GRANT_TYPE=client_credentials
 EXPO_PUBLIC_CLIENT_ID=
 EXPO_PUBLIC_CLIENT_SECRET=
