removed AI code

--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
   "expo": {
     "name": "VivoCare",
-    "slug": "vivocare",
-    "version": "1.0.0",
+    "slug": "fhir-app",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/appstore.png",
     "userInterfaceStyle": "light",
+    "scheme": "fhir-dashboard",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "cover"
@@ -14,13 +15,15 @@
       "**/*"
     ],
     "ios": {
+      "buildNumber": "19",
       "supportsTablet": false,
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to securely capture credit card information."
-      }
+      },
+      "bundleIdentifier": "com.brewerdigital.fhirdashboard"
     },
     "android": {
-      "versionCode": 17,
+      "versionCode": 19,
       "adaptiveIcon": {
         "foregroundImage": "./assets/appstore.png",
         "backgroundColor": "#ffffff"
@@ -31,6 +34,7 @@
         "android.permission.DOWNLOAD_WITHOUT_NOTIFICATION",
         "android.permission.ACCESS_NETWORK_STATE"
       ],
+      "package": "com.brewerdigital.fhirdashboard",
       "googleServicesFile": "./google-services.json"
     },
     "web": {
@@ -48,12 +52,20 @@
             "usesCleartextTraffic": true
           }
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "extra": {
       "router": {
         "origin": false
+      },
+      "bugsnag": {
+        "apiKey": "1e30b647adf4a385efbbb03d2c5f3a34"
+      },
+      "eas": {
+        "projectId": "eabcadfa-7fee-400e-8e04-f2f5c4d1d35b"
       }
-    }
+    },
+    "owner": "brewerdigital"
   }
 }
