--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -77,6 +77,7 @@
         ]
       }
     ],
+    "react/jsx-no-useless-fragment": "off",
     "react/react-in-jsx-scope": "off",
     "react-native/sort-styles": [
       "error",
