--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "VivoCare",
-    "slug": "vivocare",
+    "slug": "fhir-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/appstore.png",
@@ -17,7 +17,8 @@
       "supportsTablet": false,
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to securely capture credit card information."
-      }
+      },
+      "bundleIdentifier": "com.brewerdigital.fhirdashboard"
     },
     "android": {
       "versionCode": 17,
@@ -53,7 +54,14 @@
     "extra": {
       "router": {
         "origin": false
+      },
+      "bugsnag": {
+        "apiKey": "1e30b647adf4a385efbbb03d2c5f3a34"
+      },
+      "eas": {
+        "projectId": "eabcadfa-7fee-400e-8e04-f2f5c4d1d35b"
       }
-    }
+    },
+    "owner": "brewerdigital"
   }
 }
