updated permissions message

--- a/app.json
+++ b/app.json
@@ -49,7 +49,7 @@
       [
         "expo-build-properties",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends.",
+          "photosPermission": "The app accesses your photos to let you upload a photo to your profile.",
           "android": {
             "usesCleartextTraffic": true
           }
