--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@config-plugins/react-native-blob-util": "^6.0.0",
     "@config-plugins/react-native-pdf": "^6.0.0",
     "@expo-google-fonts/alata": "^0.2.3",
+    "@expo-google-fonts/inter": "^0.2.3",
     "@hookform/error-message": "^2.0.1",
     "@react-native-community/datetimepicker": "7.6.2",
     "@react-native-community/netinfo": "9.3.10",
@@ -38,6 +39,7 @@
     "expo-font": "~11.4.0",
     "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-notifications": "~0.20.1",
@@ -59,8 +61,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "expo-image-picker": "~14.3.2"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
