fixed messages bug on android

--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
         "foregroundImage": "./assets/appstore.png",
         "backgroundColor": "#ffffff"
       },
+      "softwareKeyboardLayoutMode": "pan",
       "permissions": [
         "android.permission.READ_EXTERNAL_STORAGE",
         "android.permission.WRITE_EXTERNAL_STORAGE",
