--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/drawer": "^6.6.6",
-    "@rneui/base": "^4.0.0-rc.8",
-    "@rneui/themed": "^4.0.0-rc.8",
+    "@shopify/flash-list": "1.4.3",
     "@stripe/stripe-react-native": "0.28.0",
     "@tanstack/react-query": "^5.7.2",
     "ajv": "^8.12.0",
@@ -61,8 +60,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "@shopify/flash-list": "1.4.3"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -86,9 +84,6 @@
   },
   "private": true,
   "overrides": {
-    "@rneui/themed": {
-      "@rneui/base": "4.0.0-rc.8"
-    },
     "@expo/config-plugins": "~7.2.2",
     "@expo/prebuild-config": "~6.2.4"
   },
